# network-scheduler

./: .gitignore  Cargo.toml  Dockerfile  rust-toolchain.toml
.github/workflows/: ci.yaml  docker-last-block-backfill.yml  docker-metadata-service.yml  docker-reshuffle-sim.yml  docker-reusable.yml  docker-row-counts-backfill.yml  docker.yml
crates/metadata-service/: Cargo.toml
crates/metadata-service/deploy/: Dockerfile
crates/metadata-service/src/: auth.rs  config.rs  dto.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  openapi.rs
crates/metadata-service/tests/: api_doc.rs  http.rs
crates/metadata-service/tests/common/: mod.rs
crates/scheduler-metadata/: Cargo.toml
crates/scheduler-metadata/migrations/: 0001_sched_tables.sql
crates/scheduler-metadata/src/: dataset_schema.rs  error.rs  ids.rs  ingest_api.rs  lib.rs  metrics.rs  new_chunk.rs  new_dataset.rs
crates/scheduler-metadata/src/pg/: correction.rs  ingest.rs  lock.rs  migrations.rs  mod.rs  nonoverlap.rs  registration.rs  rows.rs  schema.rs
docs/: README.md  api.md  assignment-wire-format.md  capacity-aware-scheduling.md  chunk-reshuffling.md  metadata-service-api.md  mvcc-chunks.md  mvcc-schema-diagram.html  mvcc-schema.md  mvcc-storage.md  mvcc-worker-mappings.md  nonoverlap-promotion-gate.md  schema-bundle-lifecycle.md
docs/adr/: 0001-same-cycle-floor-preemption.md  0002-schema-bundle-covers-visible-chunks.md  0003-overlap-decided-at-insert.md
examples/: dev_example.yaml  scheduler_config.yaml
migrations/: 0001_sched_tables.sql  0002_cycle_scan_indexes.sql  0003_drop_ideal_chunks_fk.sql
scripts/: last_block_back_fill.py  test_last_block_back_fill.py
scripts/last_block_backfill/: Dockerfile  backfill.yml  delete_data.py  last_block_back_fill.py  mainnet-backfill-base.yml  mainnet-backfill-eclipse-mainnet.yml  mainnet-backfill-solana-mainnet-2.yml  mainnet-backfill-solana-mainnet-3.yml  requirements.txt  run-docker.sh  test_last_block_back_fill.py  testnet-backfill.yml
scripts/row_counts/: .gitignore  Dockerfile  docker-compose.yaml  init.sql  requirements.in  requirements.txt  row_counts_fill.py  testnet-backfill.yml
scripts/row_counts/data/: upload_to_s3.sh
src/: assignment.rs  cli.rs  cli_state.rs  clickhouse.rs  controller.rs  dataset_data_storage.rs  lib.rs  main.rs  metrics.rs  multistep_controller.rs  parquet.rs  pool.rs  replication.rs  rings.rs  scheduling.rs  schema_files.rs  storage.rs  types.rs  upload.rs  weight.rs
src/multistep_scheduler/: mod.rs  sim.rs  tests.rs
src/multistep_scheduler/sim/: regression.rs  sut.rs  utils.rs
src/multistep_scheduler/sim/sut/: churn.rs  flood.rs  guided.rs  observers.rs  pg_tests.rs  placement_oracles.rs  preconditions.rs  tests.rs  trace.rs  zero_quorum.rs
src/scheduler_storage/: algorithm.rs  ids.rs  in_memory.rs  mod.rs  schema_bundle.rs
src/scheduler_storage/in_memory/: mod.rs  nonoverlap.rs
src/scheduler_storage/in_memory/tests/: correction_tests.rs  inspect.rs  mod.rs  mvcc_protocol.rs
src/scheduler_storage/in_memory/tests/correction_tests/: machinery.rs  multistep.rs
src/scheduler_storage/postgres/: admission.rs  correction.rs  debug.rs  explain.rs  mod.rs  nonoverlap.rs  registration.rs  rows.rs  scheduling_cycle.rs  schema.rs  testkit.rs  visibility.rs  workers.rs
src/scheduler_storage/postgres/tests/: correction.rs  correction_tests.rs  drain_tests.rs  feed_order_tests.rs  ingest_tests.rs  inspect.rs  mod.rs  registration_tests.rs  schema.rs  worker_tests.rs
src/scheduler_storage/test_harness/: correction_oracle.rs  inspect.rs  mod.rs  pg_harness.rs  utils.rs
src/tests/: chunks_shuffling.rs  input.rs  mod.rs  scenarios.rs  scheduling.rs  scheduling_proptests.rs  utils.rs
src/types/: assignment.rs  chunk.rs  dataset.rs  dataset_schema.rs  mod.rs  status.rs  summary.rs  worker.rs
src/utils/: count_write.rs  mod.rs
tools/clear_block_hash/: Cargo.toml
tools/clear_block_hash/src/: main.rs
tools/compare_fb/: Cargo.toml
tools/compare_fb/src/: main.rs
tools/reshuffle_sim/: Cargo.toml  README.md
tools/reshuffle_sim/deploy/: .gitignore  Dockerfile  README.md  entrypoint.sh  fetch-logs.sh  pg-forward.sh  pod.yaml  run-pod.sh  run-scenarios.sh  setup-db.sh
tools/reshuffle_sim/deploy/scenarios/: baseline-lag.yaml  baseline-short.yaml  baseline.yaml  copy-replace-lag-heavy.yaml  copy-replace-lag.yaml  copy-replace.yaml
tools/reshuffle_sim/src/: baseline.rs  chunks.rs  cli.rs  main.rs  metrics.rs  multistep.rs  profile.rs  rate.rs  report.rs  scheduler.rs  simulation.rs  stateless.rs  types.rs  upgrade.rs  util.rs
tools/reshuffle_sim/templates/: report.html
