[package]
name = "network-scheduler"
version = "3.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.85.0"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive", "env"] }
clickhouse = "0.13.2"
dotenv = "0.15.0"
flatbuffers = "25.2.10"
flate2 = "1.1.1"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
libp2p-identity = { version = "0.2.10", features = ["peerid", "rand", "serde"] }
multihash = "0.19.3"
parking_lot = "0.12.3"
parquet = "54.2"
prometheus-client = "0.23.1"
rand = "0.9.1"
rayon = "1.10.0"
seahash = "4.1.0"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sqd-messages = { git = "https://github.com/subsquid/sqd-network.git", rev = "f804d7e", features = ["bitstring", "assignment_writer"] }
sqd-assignments = { git = "https://github.com/subsquid/sqd-network.git", rev = "f804d7e", features = ["builder"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "parking_lot"] }
