[package]
name = "scheduler-metadata"
version = "0.1.0"
edition = "2024"

[lib]
name = "scheduler_metadata"

[dependencies]
anyhow = "1.0.98"
bit-vec = { workspace = true }
lazy_static = "1.5.0"
prometheus-client = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { workspace = true }
thiserror = "2.0.12"
utoipa = { version = "5", optional = true }
tracing = "0.1.41"

[features]
openapi = ["dep:utoipa"]
