[package]
name = "reshuffle-sim"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive", "env"] }
# dhat is the global allocator only under the `dhat-heap` feature; the default build uses jemalloc.
dhat = { version = "0.3", optional = true }
tikv-jemallocator = "0.6"
flate2 = "1.1.1"
network-scheduler = { path = "../..", features = ["mvcc-chunks", "pg-testkit"] }
sqd-assignments = { git = "https://github.com/subsquid/sqd-network.git", rev = "fa19681", features = ["reader"] }
libp2p-identity = { version = "0.2.10", features = ["peerid"] }
semver = "1.0.26"
bytesize = { version = "2.3.1", features = ["serde"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread"] }
tabled = "0.21"

[features]
# Heap-profile a run with dhat instead of the default jemalloc allocator, e.g.
#   cargo run --release --features dhat-heap -- --dhat <args>
dhat-heap = ["dep:dhat"]
